--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,7 @@ h4,
 p{
 	margin: 0;
 	padding: 0;
-	/*font-family: 'Open Sans', sans-serif;*/
 	font-family: 'Lato', sans-serif;
-	/*font-family: 'Raleway', sans-serif;*/
 	font-weight: 300;
 	
 }
@@ -64,7 +62,8 @@ h4{
 }
 .flex{
 	display: flex;
-	flex-direction: row;
+	/*flex-direction: row;*/
+	flex-wrap: wrap;
 	justify-content: space-between; 
 }
 address{
@@ -94,20 +93,43 @@ address{
 	color: #ED3663;
 }
 .flex-col-2 {
-	flex: 1 16.66667%;
+	flex: 0 0 16.66667%;
 }
+
+
 .flex-col-3 {
-	flex: 1 25%;
+	flex: 0 0 25%;
 }
 .flex-col-6 {
-	flex: 1 50%;
+	flex: 0 0 50%;
 }
 .flex-col-9 {
-	flex: 1 75%;
+	flex: 0 0 75%;
 }
 .flex-col-10 {
-	flex: 1 83.33333%;
+	flex: 0 0 83.33333%;
 }
+
+@media screen and (max-width: 599px) {
+	.page {
+		max-width: 430px;
+		padding-right: 15px;
+		padding-left: 15px;
+	}
+	.flex { 
+		
+	}
+	.col-xs-6 {
+		flex: 0 0 50%;
+		max-width: 50%;
+	}
+	.col-xs-12 {
+		flex: 0 0 100%;
+		max-width: 100%;
+	}		
+}
+
+
 .divider{
 	display: block;
 	margin: 2rem auto;
